# Cryptol-CraftCodeLab

./: .gitignore  README.md  SimpleHash.cry  XOR.cry  XORCipher.cry  XorExample.cry  aes.cry  caesar_cipher.cry  demo.cry  exer1.cry  sudoku.cry  sudoku_ai.py  test.cry  test.hs
HIGHT-KISA/: HIGHT-KISA-VERIF.saw  HIGHT-KISA.cry  KISA_HIGHT_ECB  KISA_HIGHT_ECB.c  KISA_HIGHT_ECB.h  KISA_HIGHT_SPEC.cry  KISA_HIGHT_VERIFY.saw  KeySchedTime.py  KeySchedTime.txt  Makefile  TimeMeasure.py  TimeMeasure.txt  helpers.saw  testvector.txt
HIGHT-KISA-Rubbish/rubbish/: HIGHT-KISA-VERIF.saw  HIGHT-KISA.cry  testvector.py
HIGHT-KISA/include/: config.h  (+1 more)
HIGHT-verification/: HIGHT-VERIF.saw  HIGHT.cry  Makefile  verify.saw
aes/: aes128.cry  aes_test.cry
arithmetic_verfication/: Makefile  add_llvm.saw  multiply_llvm.saw
capstone-hight/: ARX.c  ARX.cry  ARX_Adv.cry  ARX_llvm.bc  ARX_llvm.saw  Makefile  arx  const-time.cry  cycle_single.txt  hight  hight.c  test  valid_add.c
crux/: file1.c
crux-default/: file.c
doc/: Cryptol_DevNote_Main.tex  bibliography.tex  settings.tex
foreign-function-interface/: Example.c  Example.cry
rubbish/: SimpleHash.cry  SimpleXOREncryption.cry  reverse.hs
rubbish/cryptolust/: Cargo.toml  README.md
rubbish/cryptolust/src/: lib.rs
rust_verification/: Cargo.toml
saw-python/: swap.bc  swap.c  swap_spec.py
sudoku/: sudoku_ai.py
void-type/: Makefile  SWAP.cry  salsa20.bc  salsa20.saw  swap.bc  swap.c  swap.saw  u128.saw
void_verification/: add_llvm.saw  arithmetic.bc  arithmetic.c  arithmetic_cryptol.cry
xor_example/: Cargo.toml
(+91 files in other folders)
